--- a/README
+++ b/README
@@ -145,6 +145,9 @@ Use `svctl` to query top-level supervisor:
 	svctl -s udevmod       # start it again
 	svctl -P               # poweroff
 
+	svctl keymon           # properly running service
+	svctl badsrv           # failed service
+
 Use `vtctl` to control vtmux:
 
 	vtctl 4                # switch to VT4
@@ -187,9 +190,9 @@ Troubleshooting and caveats
 Errors at "Waiting for devices" stage indicate lack of necessary modules,
 especially USB-related.
 
-Weston may not display cursor in qemu upon boot. Try switching VTs (C-Esc
-or C-F2 or C-F4, then C-F3) to force reinitialization. Not a minibase issue
-as far as I can tell at this point. Should work much better on real hardware.
+Weston may not display cursor in qemu upon boot. Try switching VTs (C-Esc Esc)
+to force reinitialization. Not a minibase issue as far as I can tell at this
+point. Should work much better on real hardware.
 
 Weston degrades into unusable mess when running in non-KVM qemu. Apparently
 the slow emulated CPU breaks some frame sync assumptions. Without KVM, it may
