--- a/README
+++ b/README
@@ -68,9 +68,9 @@ unpack it and rename the directory into ./buildroot.
 #
 # otherwise the build will fail.
 
-Clone (or download and unpack) https://github.com/arsv/minibase to ./minibase.
-Build minibase:
+Update ./minibase and build it:
 
+	git submodule update --init
 	cd minibase
 	./configure
 	make
